--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,345 @@
 @charset "utf-8";
+
+.input-area:focus {
+  background-color: #fff;
+  border-color: rgba(59, 133, 133, .4);
+  box-shadow: 0 0 0 2px rgba(1, 192, 189, 0.1);
+}
+
+
+.wrapper {
+  padding: 32px 0;
+  width: 100%;
+  background-color: #f2f6f7;
+}
+
+.inner {
+  margin: 0 auto;
+  width: 640px;
+}
+
+
+.main {
+  box-sizing: border-box;
+  margin-bottom: 32px;
+  padding: 48px 64px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
+}
+
+.title {
+  text-align: center;
+  color: #545658;
+  margin-bottom: 24px;
+  font-size: 24px;
+}
+
+.contents {
+  display: flex;
+  margin-bottom: 8px;
+}
+
+.Facebook {
+  width: 50%;
+}
+
+.Google {
+  width: 50%;
+  margin-left: 8px;
+}
+
+.is-facebook {
+  color: #fff;
+  background-color: #3b5999;
+  border: 1px solid  #3b5999;
+}
+
+.is-google {
+  color: #dd4b39;
+  border: 1px solid #d9d9d9;
+}
+
+.button {
+  box-sizing: border-box;
+  display: inline-block;
+  text-align: center;
+  transition: .3s;
+  padding: 13px;
+  font-size: 13px;
+  border-radius: 3px;
+  width: 100%;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.contents-text {
+  text-align: center;
+  color: #949697;
+  font-size: 12px;
+}
+
+.sub-title {
+  position: relative;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.sub-title::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 1px;
+  width: 100%;
+  background-color: #ececec;
+}
+
+.sub-title p {
+  display: inline-block;
+  position: relative;
+  padding: 0 10px;
+  background-color: #fff;
+}
+
+.name-box{
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.name {
+  margin-left: 16px;
+  width: 50%;
+}
+
+.name:first-child {
+  margin-left: 0px;
+}
+
+.alert {
+  color: #dd4b39;
+}
+
+.label-text {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 12px;
+  color: #545658;
+  width: 100%;
+}
+
+.input-area {
+  box-sizing: border-box;
+  height: 36px;
+  width: 100%;
+  padding: 5px;
+  color: #545658;
+  font-size: 13px;
+  line-height: 2;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  outline: none;
+}
+
+.gender {
+  margin-bottom: 20px;
+}
+
+.gender-contents {
+  display: flex;
+  color: #545658;
+  font-size: 16px;
+}
+
+.gender-content {
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.gender-content:first-child {
+  margin-left: 0;
+}
+
+.gender-content input {
+  display: none;
+}
+
+.gender-content span {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+}
+
+.gender-content span::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 14px;
+  width: 14px;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+}
+
+.gender-input:checked + span::after {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background-color: #01bfbd;
+}
+
+.from {
+  margin-bottom: 20px;
+  width: 50%;
+}
+
+.select-box {
+  position: relative;
+}
+
+option {
+  font-weight: normal;
+  display: block;
+  white-space: pre;
+  min-height: 1.2em;
+  padding: 0px 2px 1px;
+}
+
+.select-box::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 45%;
+  transform: rotate(45deg);
+  height: 5px;
+  width: 5px;
+  border-right: 2px solid #d9d9d9;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.email {
+  margin-bottom: 20px;
+}
+
+.tel {
+  margin-bottom: 20px;
+}
+
+.password {
+  margin-bottom: 20px;
+}
+
+.checkbox {
+  margin-bottom: 20px;
+}
+
+.checkbox-option {  
+  margin-bottom: 10px;
+  color: #545658;
+}
+
+.checkbox-option-text {
+  position: relative;
+  padding-left: 25px;
+}
+
+.checkbox-option-text::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 15px;
+  width: 15px;
+  margin-top: -8px;
+  border: 1px solid #d9d9d9;
+}
+
+.checkbox-option input:checked + .checkbox-option-text::after {
+  content: '';
+  position: absolute;
+  left: 6px;
+  top: 50%;
+  transform: rotate(45deg);
+  height: 16px;
+  width: 8px;
+  margin-top: -12px;
+  border-right: 3px solid #01bfbd;
+  border-bottom: 3px solid #01bfbd;
+}
+
+.checkbox input {
+  display: none;
+}
+
+.text-area {
+  margin-bottom: 20px;
+}
+
+.text-area .input-area {
+  height: 100px;
+  resize: none;
+}
+
+.done {
+  margin-bottom: 20px;
+}
+
+.done-button {
+  padding: 13px;
+  background-color: #01bfbd;
+  color: #fff;
+  width: 100%;
+  border: none;
+}
+
+.agree {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.link {
+  color: #01a6a4;
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer p, .ask {
+  margin-bottom: 8px;
+  line-height: 16px;
+  font-size: 12px;
+}
+
+.ask {
+  display: inline-block;
+}
+
+.footer:hover {
+  box-sizing: border-box;
+  border-bottom: 1px solid #ececec;
+  border-bottom-color: #01bfbd;
+}
+
+.done-button:active {
+  background-color: #fff;
+  color: #01a6a4;
+  border: 1px solid #d9d9d9;
+  outline: none;
+}
