--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,16 @@
   box-shadow: 0 0 0 2px rgba(1, 192, 189, 0.1);
 }
 
+.input-init {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 0;
+  background: transparent;
+  border: none;
+  outline: none;
+  resize: none;
+}
 
 .wrapper {
   padding: 32px 0;
@@ -55,9 +65,17 @@
   border: 1px solid  #3b5999;
 }
 
+.is-facebook:hover {
+  background-color: #344e87;
+}
+
 .is-google {
   color: #dd4b39;
   border: 1px solid #d9d9d9;
+}
+
+.is-google:hover {
+  background-color: #f7f7f7;
 }
 
 .button {
@@ -317,6 +335,10 @@ select {
   color: #01a6a4;
 }
 
+.link:hover {
+  color: #01bfbd;
+}
+
 .footer {
   text-align: center;
 }
@@ -337,13 +359,15 @@ select {
   border-bottom-color: #01bfbd;
 }
 
+.done-button:hover {
+  background-color: #01a6a4;
+}
+
 .done-button:active {
   background-color: #fff;
   color: #01a6a4;
   border: 1px solid #d9d9d9;
-  outline: none;
 }
 
-.done-button:hover {
-  background-color: #01a6a4;
-}
+
+
